--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button class="addOption">Add</button>
     </div>
     <div class="resultSection"></div>
-    <button class="doit">Do it!</button>
+    <button class="scramble">Scramble!</button>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script>
@@ -24,8 +24,20 @@
         var add_option = function() {
           $('.inputs').append('<input></input>')
         }
-
         $('.addOption').click(add_option)
+
+      var options = []
+      var scramble = function() {
+        $('.inputSection').hide()
+        $('.resultSection').css('display', 'flex')
+        $('input').each(function() {
+          options.push($(this).val())
+        })
+        var winner = options[Math.floor(Math.random() * options.length)]
+        console.log(winner)
+        $('.resultSection').text(winner)
+      }
+      $('.scramble').click(scramble)
     })
     </script>
   </body>
